--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<span id="scoreUser">0</span>:<span id="scoreComp">0</span>
 		</div>
 		
-		<div id="result"> <p>User escolheu papel computer tesoura! Você perdeu!! </p></div>
+		<div id="result">Resultado da Partida</div>
 		
 		<div class="escolhas">
 			<div class="escolha" id="r">
